--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
   "type": "module",
   "scripts": {
     "forever": "forever -w server.js",
-    "client": "cd frontend && npm start"
+    "client": "cd frontend && npm start",
+    "dev": "concurrently \"npm run forever\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "concurrently": "^5.3.0",
     "config": "^3.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-router": "^0.0.1",
     "express-validator": "^6.6.0",
