--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "axios": "^0.19.2",
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.12.2",
     "react-loader-spinner": "^3.1.14",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.1",
