--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "gravatar": "^1.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.25",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.6",
+    "react-scripts": "^4.0.1",
+    "start": "^5.1.0"
   }
 }
